# mypycore

./: README.md  environment.yml  pyproject.toml
refs/openai/: memory.md
refs/pyproject/: README.md  pyproject.toml
tools/dither/: README.md  pyproject.toml
tools/dither/src/dither/: main.py
tools/llmscan/: README.md  ai-summary.md  pyproject.toml
tools/llmscan/src/llmscan/: main.py
