[tool.poetry]
name = "llmscan"
version = "0.1.0"
description = "A script to generate a markdown summary of a codebase to show to your favorite llm assistant."
authors = ["morgan <oss@morgandally.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "llmscan", from = "src"}]

[tool.poetry.scripts]
llmscan = "llmscan.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
