[tool.poetry]
name = "llmscan"
version = "0.1.0"
description = "A script to generate a markdown summary of a codebase to show to your favorite llm assistant."
authors = ["morgan <oss@morgandally.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llmscan", from = "src" }]

[tool.poetry.scripts]
llmscan = "llmscan.main:main"

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.9.0"
toml = "^0.10.2"

[tool.llmscan]
ignore_dirs = ["__pycache__", "node_modules"]
ignore_re = ["ai-summary.md"]
extensions = [".py", ".js", ".md", ".css"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
